--- a/index.html
+++ b/index.html
@@ -3,12 +3,19 @@
 
   <head>
     <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <link rel="stylesheet" href="css/bootstrap.css">
+    <link rel="stylesheet" href="css/main.css">
     <title>Activities To Do</title>
   </head>
   <body>
-    <h1>You should:</h1>
-    <h3 class="activity"></h3>
-    <p class="type small"></p>
+    <header>
+      <h1>Choose a search type</h1>
+      <h3 class="activity"></h3>
+      <p class="type small"></p>
+    </header>
 
     <form id="form" action="POST">
       <input type="checkbox" name="free" id="free">
