--- a/participant.html
+++ b/participant.html
@@ -18,8 +18,8 @@
       <!-- Extended nav on top right -->
       <nav class="container site-nav navbar navbar-expand-md">
         <div class="container-fluid">
-          <a id="search" class="nav-item nav-link" href="index.html" style="color: #d4af37;">ACTIVITY TYPE</a>
-          <a class="nav-item nav-link" href="participant.html">NUMBER OF PARTICIPANTS</a>
+          <a class="nav-item nav-link" href="index.html">ACTIVITY TYPE</a>
+          <a class="nav-item nav-link" href="participant.html" style="color: #d4af37;">NUMBER OF PARTICIPANTS</a>
           <a class="nav-item nav-link" href="cost.html">COST</a>
           <a class="nav-item nav-link" href="accessibility.html">ACCESSIBILITY</a>
         </div>
