updated index with searchlinks

--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
       <!-- Extended nav on top right -->
       <nav class="container site-nav navbar navbar-expand-md">
         <div class="container-fluid">
-          <a id="search" class="nav-item nav-link" href="index.html" style="color: #d4af37;">ACTIVITY TYPE</a>
-          <a class="nav-item nav-link" href="participant.html">NUMBER OF PARTICIPANTS</a>
-          <a class="nav-item nav-link" href="cost.html">COST</a>
-          <a class="nav-item nav-link" href="accessibility.html">ACCESSIBILITY</a>
+          <a class="nav-item nav-link type" href="">ACTIVITY TYPE</a>
+          <a class="nav-item nav-link participants" href="">NUMBER OF PARTICIPANTS</a>
+          <a class="nav-item nav-link cost" href="">COST</a>
+          <a class="nav-item nav-link accessibility" href="">ACCESSIBILITY</a>
         </div>
       </nav>
     </header>
