--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <link rel="stylesheet" href="css/bootstrap.css">
+    <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
     <link rel="stylesheet" href="css/main.css">
     <title>Activities To Do</title>
   </head>
@@ -33,8 +34,8 @@
       <form action="#" class="js-search-form">
         <div class="search">
           <label class="form-p" for="searchTerm"></label>
-          <input type="text" class="js-query" id="searchTerm" placeholder="ex. recreational" autofocus>
-          <button type="submit">Submit</button>
+          <input type="text" class="js-query" id="searchTerm" autofocus>
+          <button class="btn btn-sm" type="submit">Submit</button>
         </div>
       </form>
   </div>
