updated type methods

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       </nav>
     </header>
 
-    <h3 class="activity"></h3>
+    <p class="details text-center">Please select a search type first</p>
 
     <div class="container text-center">
         <!-- SEARCH FORM -->
