--- a/index.html
+++ b/index.html
@@ -19,15 +19,15 @@
       <!-- Extended nav on top right -->
       <nav class="container site-nav navbar navbar-expand-md">
         <div class="container-fluid">
-          <a class="nav-item nav-link type" href="">ACTIVITY TYPE</a>
-          <a class="nav-item nav-link participants" href="">NUMBER OF PARTICIPANTS</a>
-          <a class="nav-item nav-link cost" href="">COST</a>
-          <a class="nav-item nav-link accessibility" href="">ACCESSIBILITY</a>
+          <a class="nav-item nav-link type" id="linkType" href="">ACTIVITY TYPE</a>
+          <a class="nav-item nav-link participants" id="linkPart" href="">NUMBER OF PARTICIPANTS</a>
+          <a class="nav-item nav-link price" id="linkPrice" href="">PRICE</a>
+          <a class="nav-item nav-link accessibility" id="linkAcc" href="">ACCESSIBILITY</a>
         </div>
       </nav>
     </header>
 
-    <p class="details text-center">Please select a search type first</p>
+    <p class="searchInfo text-center">Please select a search type first</p>
 
     <div class="container text-center">
         <!-- SEARCH FORM -->
@@ -40,12 +40,19 @@
       </form>
   </div>
 
+  <div id="myModal" class ="modal">
+    <div class="modal-content">
+      <span class="close container">&times;</span>
+      <p class="text"></p>
+    </div>
+  </div>
+
   <!-----*** SECTION - SEARCH RESULTS ***----->
-  <section class="js-search-results">
+  <section class="results js-search-results container-fluid text-center">
 
   </section>
-
     <script src="js/index.js"></script>
+    <script src="js/modal.js"></script>
 
   </body>
 </html>
