added enter page

--- a/index.html
+++ b/index.html
@@ -12,6 +12,13 @@
     <title>Activities To Do</title>
   </head>
   <body>
+
+    <div id="hideMe">
+    <div class="sprite" id="zombie"></div>
+    <h1 id="enter">Enter...</h1>
+    </div>
+
+    <div id="showMe">
     <header id="header-contact" class="site-header align-content-between container">
       <div class="container-fluid">
         <h1 class="text-center">Choose a search type</h1>
@@ -51,6 +58,8 @@
   <section class="results js-search-results container-fluid text-center">
 
   </section>
+  </div>
+  
     <script src="js/index.js"></script>
     <script src="js/modal.js"></script>
 
