added enter page and started design

--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
   <body>
 
     <div id="hideMe">
-    <div class="sprite" id="zombie"></div>
-    <h1 id="enter">Enter...</h1>
+    <h1>Are you ready to try random activities?</h1>
+    <button id="enter" class="btn btn-lg">I'M IN!</button>
     </div>
 
     <div id="showMe">
-    <header id="header-contact" class="site-header align-content-between container">
+    <header id="header-contact" class="site-header align-content-between">
       <div class="container-fluid">
-        <h1 class="text-center">Choose a search type</h1>
+        <h2 class="text-center">Choose a search type</h2>
       </div>
       <!-- Extended nav on top right -->
       <nav class="container site-nav navbar navbar-expand-md">
@@ -32,11 +32,11 @@
           <a class="nav-item nav-link accessibility" id="linkAcc" href="">ACCESSIBILITY</a>
         </div>
       </nav>
-    </header>
 
     <p class="searchInfo text-center">Please select a search type first</p>
 
     <div class="container text-center">
+      <h2>Let's Get That Activity!</h2>
         <!-- SEARCH FORM -->
       <form action="#" class="js-search-form">
         <div class="search">
@@ -53,13 +53,14 @@
       <p class="text"></p>
     </div>
   </div>
+  </header>
 
   <!-----*** SECTION - SEARCH RESULTS ***----->
   <section class="results js-search-results container-fluid text-center">
 
   </section>
   </div>
-  
+
     <script src="js/index.js"></script>
     <script src="js/modal.js"></script>
 
