--- a/index.html
+++ b/index.html
@@ -59,6 +59,13 @@
   <section class="results js-search-results container-fluid text-center">
 
   </section>
+
+  <footer>
+    <div class="container flex-direction">
+    <p class="footer">Copyright &copy; ACTIVITIES TO DO. All rights reserved.</p>
+    <a href="#" class="footer">Contact Us</a>
+  </div>
+  </footer>
   </div>
 
     <script src="js/index.js"></script>
