--- a/index.html
+++ b/index.html
@@ -26,23 +26,24 @@
       <!-- Extended nav on top right -->
       <nav class="container site-nav navbar navbar-expand-md">
         <div class="container-fluid">
-          <a class="nav-item nav-link type" id="linkType" href="">ACTIVITY TYPE</a>
-          <a class="nav-item nav-link participants" id="linkPart" href="">NUMBER OF PARTICIPANTS</a>
-          <a class="nav-item nav-link price" id="linkPrice" href="">PRICE</a>
-          <a class="nav-item nav-link accessibility" id="linkAcc" href="">ACCESSIBILITY</a>
+          <a class="nav-item nav-link type" id="linkType" href="" data-activity='type'>ACTIVITY TYPE</a>
+          <a class="nav-item nav-link participants" id="linkPart" href="" data-activity='participants'>NUMBER OF PARTICIPANTS</a>
+          <a class="nav-item nav-link price" id="linkPrice" href="" data-activity='price'>PRICE</a>
+          <a class="nav-item nav-link accessibility" id="linkAcc" href="" data-activity='accessibility'>ACCESSIBILITY</a>
         </div>
       </nav>
 
-    <p class="searchInfo text-center">Please select a search type first</p>
+    <p class="searchInfo searchInfoDef text-center"></p>
 
     <div class="container text-center">
-      <h2>Let's Get That Activity!</h2>
+      <h2 class="searchTitle">Let's Get That Activity!</h2>
         <!-- SEARCH FORM -->
       <form action="#" class="js-search-form">
         <div class="search">
+          <p class="errMsg"></p>
           <label class="form-p" for="searchTerm"></label>
           <input type="text" class="js-query" id="searchTerm" autofocus>
-          <button class="btn btn-sm" type="submit">Submit</button>
+          <button class="btn btn-sm" type="submit">Search</button>
         </div>
       </form>
   </div>
@@ -61,15 +62,13 @@
   </section>
 
   <footer>
-    <div class="container flex-direction">
-    <p class="footer">Copyright &copy; ACTIVITIES TO DO. All rights reserved.</p>
-    <a href="#" class="footer">Contact Us</a>
+    <div class="container">
+    <p class="footer text-center">Copyright &copy; ACTIVITIES TO DO. All rights reserved.</p>
   </div>
   </footer>
   </div>
 
     <script src="js/index.js"></script>
-    <script src="js/modal.js"></script>
 
   </body>
 </html>
