completed all style and validations

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </div>
       </nav>
 
-    <p class="searchInfo searchInfoDef text-center"></p>
+    <p class="searchInfo text-center"></p>
 
     <div class="container text-center">
       <h2 class="searchTitle">Let's Get That Activity!</h2>
