added media queries

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
   <body>
 
     <div id="hideMe">
-    <h1>Are you ready to try random activities?</h1>
-    <button id="enter" class="btn btn-lg">I'M IN!</button>
+    <h1 class="text-center">Are you ready to try random activities?</h1>
+    <button id="enter" class="btn btn-lg text-center">I'M IN!</button>
     </div>
 
     <div id="showMe">
