updated errMsg color

--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
     </div>
 
     <div id="showMe">
-    <header id="header-contact" class="site-header align-content-between">
+    <header id="header-contact">
       <div class="container-fluid">
         <h2 class="text-center">Choose a search type</h2>
       </div>
 
-      <nav class="container site-nav navbar navbar-expand-md">
+      <nav class="navbar navbar-expand-md justify-content-between">
         <div class="container-fluid">
           <a class="nav-item nav-link type" id="linkType" href="" data-activity='type'>ACTIVITY TYPE</a>
           <a class="nav-item nav-link participants" id="linkPart" href="" data-activity='participants'>NUMBER OF PARTICIPANTS</a>
