updated link format

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
   <head>
-    <meta charset="utf-8" />
+    <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
@@ -19,13 +19,13 @@
     </div>
 
     <div id="showMe">
-    <header id="header-contact">
+    <header id="header-index">
       <div class="container-fluid">
         <h2 class="text-center">Choose a search type</h2>
       </div>
 
-      <nav class="navbar navbar-expand-md justify-content-between">
-        <div class="container-fluid">
+      <nav class="site-nav navbar navbar-expand-md justify-content-center">
+        <div class="navbar-nav">
           <a class="nav-item nav-link type" id="linkType" href="" data-activity='type'>ACTIVITY TYPE</a>
           <a class="nav-item nav-link participants" id="linkPart" href="" data-activity='participants'>NUMBER OF PARTICIPANTS</a>
           <a class="nav-item nav-link price" id="linkPrice" href="" data-activity='price'>PRICE</a>
